PR Changes: adjust spacing, fix tablet logo alignment

--- a/app/assets/stylesheets/views/_flexible-content.scss
+++ b/app/assets/stylesheets/views/_flexible-content.scss
@@ -12,7 +12,7 @@ $gap: 30px;
 }
 
 .impact-header__caption {
-  margin-top: 15px;
+  padding-top: 15px;
   padding-bottom: 15px;
 
   @include govuk-media-query($from: desktop) {
@@ -60,7 +60,6 @@ $gap: 30px;
   overflow: hidden;
   display: flex;
   align-items: center;
-  align-self: flex-end;
   justify-content: center;
   aspect-ratio: 16 / 9;
   box-sizing: border-box;
@@ -69,6 +68,7 @@ $gap: 30px;
     width: 50%;
     aspect-ratio: auto;
     max-width: $box-size;
+    align-self: flex-end;
   }
 }
 
